Layout adjustment, attempt to fix overflow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,8 +46,6 @@ html {
     html{font-size:80px;}
 }
 
-
-
 body {
     font-family: 'Teko', sans-serif;
     background-repeat: no-repeat;
@@ -58,6 +56,7 @@ body {
     background-size: cover;
     scroll-snap-type: y mandatory;
 }
+
 .scroll-snap {
     scroll-snap-align:start;
 }
@@ -70,7 +69,6 @@ body {
 
 .teamLogo {
     width:100%;
-    height:100%;
     max-height:100%;
 }
 .statList {
